@@ -17,6 +17,9 @@ Changes in @NEW@:
       built during subsequant iterations.
     * Dependency ordering code now looks in the local database for trove
       references instead of instantiating troves to get that information
+    * Code which decides what referenced troves need to be erased when
+      collections are erased now looks in the local database for trove
+      references instead of instantiating troves to get that information
 
   o Bug Fixes:
     * --lsprof option now writes out profiling information even if an
